add: swagger getgamesbyname
