# docs/swagger.json
@@ -17,29 +17,6 @@
     "host": "zenversegames-ba223a40f69e.herokuapp.com",
     "basePath": "/",
     "paths": {
-        "/admin": {
-            "get": {
-                "description": "Mengambil semua data admin.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Admin"
-                ],
-                "summary": "Get Data Admin.",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/controller.Games"
-                        }
-                    }
-                }
-            }
-        },
         "/delete/{id}": {
             "delete": {
                 "description": "Hapus data games.",
@@ -94,6 +71,47 @@
                         "schema": {
                             "$ref": "#/definitions/controller.Games"
                         }
+                    }
+                }
+            }
+        },
+        "/games/byname": {
+            "get": {
+                "description": "Mengambil data game berdasarkan nama.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Games"
+                ],
+                "summary": "Get Game by Name.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Nama game yang dicari",
+                        "name": "name",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controller.Games"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
                     }
                 }
             }
